--- a/Sprint123/WebUI/Views/Reservation/EmailReservation.cshtml
+++ b/Sprint123/WebUI/Views/Reservation/EmailReservation.cshtml
@@ -11,6 +11,7 @@
         <p><b>Jullie reserveringsnummer is @Html.DisplayFor(x => Model.ReservationID)</b></p><br />
         <p>Voer je email adres in om de reservering te bevestigen!</p>
         <p>@Html.TextBoxFor(x => Model.EmailAdress, new { @class = "formcontrol" })</p>
+        <p>Ik wil graag de nieuwsbrief ontvangen!   @Html.CheckBoxFor(x => Model.NewsLetter)</p>
         <input class="btn btn-success" type="submit" value="Reserveer" />
     }
 </body>
