--- a/Sprint123/WebUI/Views/Shared/_Layout.cshtml
+++ b/Sprint123/WebUI/Views/Shared/_Layout.cshtml
@@ -70,6 +70,7 @@
     <footer class="card-footer">
         <div class="container">
             <p style="color:aliceblue">&copy; @DateTime.Now.Year - IVH15</p><a href="/"><img src="~/Content/footer-logo90x30.png" alt="Avans Hogeschool" class="footerlogo" /></a>
+            <button class="btn btn-link" type="button" style="padding-left:50px" onclick="location.href = '@Url.Action("Unsubscribe", "Email")'">Afmelden nieuwsbrief</button>
         </div>
     </footer>
     <!-- End Footer Avans-->
